@startuml

title __VIAGGIO's Class Diagram__\n

  namespace viaggio {
    class viaggio.Nodo {
        + Nodo()
        + getInfo()
        + getNodo()
        + setInfo()
        # setNodo()
    }
  }
  

  namespace viaggio {
    class viaggio.TestaViaggio {
        {static} + main()
    }
  }
  

  namespace viaggio {
    class viaggio.Viaggiatore {
        - codice : int
        - nome : String
        - telefono : String
        + Viaggiatore()
        + Viaggiatore()
        + getCodice()
        + getNome()
        + getTelefono()
        + setCodice()
        + setNome()
        + setTelefono()
        + toString()
    }
  }
  

  namespace viaggio {
    class viaggio.Viaggio {
        - elementi : int
        + Viaggio()
        + elenco()
        + eliminaPrenotazione()
        + inserisciInTesta()
        + prenotazione()
        + toString()
        - eliminaInTesta()
        - getLinkPosizione()
        - getLinkPosizione()
        - visita()
    }
  }
  

  namespace viaggio {
    class viaggio.ViaggioException {
        - error : String
        ~ ViaggioException()
        ~ getError()
    }
  }
  

  viaggio.Nodo o-- viaggio.Viaggiatore : info
  viaggio.Nodo o-- viaggio.Nodo : nodo
  viaggio.Viaggio o-- viaggio.Nodo : head


right footer


endfooter

@enduml
